internationalisation + pages rework
