# backend/src/auth/dto/auth-response.dto.ts
@@ -4,6 +4,9 @@ export class AuthResponseDto {
   @ApiProperty({ example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..." })
   access_token: string;
 
+  @ApiProperty({ example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..." })
+  refresh_token: string;
+
   @ApiProperty({ example: "bearer" })
   token_type: string;
 
