# backend/src/auth/dto/refresh-token.dto.ts
@@ -1,0 +1,12 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { IsNotEmpty, IsString } from "class-validator";
+
+export class RefreshTokenRequestDto {
+  @ApiProperty({
+    example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...",
+    description: "Refresh token received during login",
+  })
+  @IsNotEmpty()
+  @IsString()
+  refresh_token: string;
+}
